--- a/estilos.css
+++ b/estilos.css
@@ -7,7 +7,7 @@ body{
     flex-direction: column;
     height: 100vh;
 }
-
+/********************************************/
 header {
     display: flex;
     justify-content: space-between;
@@ -42,8 +42,9 @@ header {
 
 .header_right .header-apps:hover {
     cursor: pointer;
-    box-shadow: 0 0 25px grey;
+    box-shadow: 0 0 10px grey;
     border-radius: 50%;
+    outline: none;
 }
 
 #perfil {
@@ -54,17 +55,18 @@ header {
     box-shadow: 0 0 10px grey;
     cursor: pointer;
 }
-
+/********************************************/
 main{
     flex: 1;
     display: flex;
-    margin-top: 12%;
+    margin-top: 15px;
     flex-direction: column;
 }
 
 #logo {
     object-fit: contain;
-    height: 100px;   
+    height: 92px;
+    padding-bottom: 40px;   
 }
 
 .search {
@@ -80,7 +82,7 @@ main{
 }
 
 .search:hover {
-    box-shadow: 0 0 3px grey;
+    box-shadow: 0 0 2.5px grey;
 }
 
 .search .search-input {
@@ -120,9 +122,12 @@ main{
 }
 
 .search-buttons button {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #3c4043;
     margin: 5px;
     padding: 10px 15px;
-    background-color: #f8f8f8;
+    background-color: #f8f9fa;
     outline: none;
     border: none;
     cursor: pointer;
@@ -137,14 +142,66 @@ main{
     font-size: 13px;
     text-align: center;
     word-spacing: 1px;
-    padding-top: 20px;
+    padding: 20px;
 }
 
 #idioma a {
     text-decoration: inherit;
-    padding-left: 6px;
+    padding-left: 8px;
 }
 
 #idioma a:hover {
     text-decoration: underline;
+}
+
+#ubicacion {
+    border-bottom: 1px solid #dadce0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+    color: #70757a;
+    padding: 15px 30px;
+}
+
+/********************************************/
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #F2F2F2;
+}
+
+footer a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    color: #70757a;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+footer .footer-left {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    float: left;
+    padding-left: 20px;
+}
+
+footer .footer-left a {
+    padding-right: 15px;
+}
+
+footer .footer-right {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    float: right;
+}
+
+footer .footer-right a {
+    padding-right: 15px;
 }
